<resources>
    <string name="app_name">EcommerseApp</string>
    <string name="action_settings">Settings</string>
    <string name="name">Enter Name</string>
    <string name="item">Item</string>
    <string name="quantity">Quantity</string>
    <string name="amount">Amount</string>
    <string name="payment_mode">Mode of payment</string>
    <string name="mobile_money">Mobile money</string>
    <string name="creadit_card">Creadit card</string>
    <string name="comment">Coment</string>
    <string name="button_save">save</string>
    <string name="batton_make_order">make order</string>
    <string name="item_list">item</string>
    <string name="date_list">date</string>
    <string name="comment_list">comment</string>
    <string name="amount_list">amount</string>
    <string name="namedet" />
    <string name="name_detail">name</string>
    <string name="item_detail">item</string>
    <string name="quantity_details">quantoty</string>
    <string name="mode_of_payment_details">mode of payment</string>
    <string name="date_details">date</string>
    <string name="location_detail">location</string>
    <string name="contact_detail">contact</string>
</resources>
